Slight fix to spacing of middle nav links

--- a/source/css/partials/_nav-banner.css.scss
+++ b/source/css/partials/_nav-banner.css.scss
@@ -57,7 +57,7 @@
       }
 
       &:nth-child(even) {
-        width: 30px;
+        width: 42px;
         font-size: 24px;
         color: #CCC;
         text-align: center;
